fix video overflow problem

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,7 +8,9 @@ body{
     right: 0;
     bottom: 0;
     min-width: 100%;
+    max-width: 100%;
     min-height: 100%;
+    max-height: 100%;
 }
 
 #play-button{
